Changes.txt
Changes:
24rth october 2025

1. dome on top of any user input shapes, if current input shape is square, and then dome command is sent it should make domes on top of sqaure (in 2d) and 3d domes on top of cuboidal structures. And this can be any other shape, cross section can be a star an ellipse, and domes should be made on top of 3d layers with cross section of those shapes and not just circles, currently it just works on circle, and even if I send dome command, it switches to circle... I do understand domes are cirular but, thats the goal, map the previous shapes to domes, smoothly transition from going in square path to building domes, use maths, geometry idk what but something
2. renderer seems to be designed only for spirals, which I said not the case always, we may have a square, star, ellipse shape or any other shape, you have to understand we are not only simulating the motion of the robot (which is similar to tool tip of a 3d printer) we want to simulate what its building, the 2 consecutive path of robot should be filled with some material and thats how we have to simulate, not just motion of robot, but also what its making.
3. rendering cap is 150 points right now, we need to go beyond that, no cap.
4. once it starts, it starts with set path and it does what it does, not differnce, the difference will come only when mid simulation (not stopped) new shape command is entered, so now the new shape command is now the reference path to be followed, and the previous and current shape that the robot is tracing becoems the observeed path, and now run ILC on this, so it smoothly transitions into the new shape entered 
5. renderer window as well as 2d simulation is not properly scaled
6. I want you to generate G code of the path followed at every instance, so we can run the 3d render simulation later and even I can feed this to a 3d printer (the g code) to see if it works as it is intended to


next set to improvements:
G-code: The provided generator is simple and assumes absolute coordinates and a single extruder; tune extrusionFactor for your real printer or post-process the .gcode.

ILC z-learning: right now we add a placeholder z-correction storage; to actually learn z-corrections you need a z-sensor and to feed z-errors into completeIteration() loop same as xy. I can add that hook next if you want.

Performance: streaming points with usleep(500) makes rendering visible. Increase stream rate or send in batches to speed up.

Robustness: If shape vertex counts differ, morpher wraps indices using modulo to avoid crashes. For better accuracy you can resample shapes to a common vertex count.

error:
aryans-cat@aryan:~/Documents/GitHub/SRL-DR$ ./build.sh
=== Building ILC Simulator Project ===
[CHECK] Verifying required system packages...

[BUILD] Compiling simulator (2D + ILC core)...
../simulator.cpp: In member function ‘void X11Visualizer::drawGrid()’:
../simulator.cpp:573:36: error: too few arguments to function ‘Point2D worldToScreen(double, double, int, int)’
  573 |             int pos = worldToScreen(val);
      |                       ~~~~~~~~~~~~~^~~~~
../simulator.cpp:60:16: note: declared here
   60 | inline Point2D worldToScreen(double x, double y, int width, int height) {
      |                ^~~~~~~~~~~~~
../simulator.cpp: In member function ‘void X11Visualizer::drawPath(const std::vector<Point2D>&, int, int, bool)’:
../simulator.cpp:592:35: error: too few arguments to function ‘Point2D worldToScreen(double, double, int, int)’
  592 |             int x1 = worldToScreen(path.back().x);
      |                      ~~~~~~~~~~~~~^~~~~~~~~~~~~~~
../simulator.cpp:60:16: note: declared here
   60 | inline Point2D worldToScreen(double x, double y, int width, int height) {
      |                ^~~~~~~~~~~~~
../simulator.cpp:593:35: error: too few arguments to function ‘Point2D worldToScreen(double, double, int, int)’
  593 |             int y1 = worldToScreen(path.back().y);
      |                      ~~~~~~~~~~~~~^~~~~~~~~~~~~~~
../simulator.cpp:60:16: note: declared here
   60 | inline Point2D worldToScreen(double x, double y, int width, int height) {
      |                ^~~~~~~~~~~~~
../simulator.cpp:594:35: error: too few arguments to function ‘Point2D worldToScreen(double, double, int, int)’
  594 |             int x2 = worldToScreen(path[0].x);
      |                      ~~~~~~~~~~~~~^~~~~~~~~~~
../simulator.cpp:60:16: note: declared here
   60 | inline Point2D worldToScreen(double x, double y, int width, int height) {
      |                ^~~~~~~~~~~~~
../simulator.cpp:595:35: error: too few arguments to function ‘Point2D worldToScreen(double, double, int, int)’
  595 |             int y2 = worldToScreen(path[0].y);
      |                      ~~~~~~~~~~~~~^~~~~~~~~~~
../simulator.cpp:60:16: note: declared here
   60 | inline Point2D worldToScreen(double x, double y, int width, int height) {
      |                ^~~~~~~~~~~~~
../simulator.cpp: In member function ‘bool RendererClient::sendPath3D(const std::vector<std::vector<Point3D> >&)’:
../simulator.cpp:735:5: error: jump to label ‘fail’
  735 |     fail:
      |     ^~~~
../simulator.cpp:726:72: note:   from here
  726 |            if (send(sockfd, msg.c_str(), msg.size(), 0) < 0) goto fail;
      |                                                                   ^~~~

../simulator.cpp:731:21: note:   crosses initialization of ‘std::string footer’
  731 |         std::string footer = "END_PATH\n";
      |                     ^~~~~~
../simulator.cpp:735:5: error: jump to label ‘fail’
  735 |     fail:
      |     ^~~~
../simulator.cpp:719:82: note:   from here
  719 | d(sockfd, header.str().c_str(), header.str().size(), 0) < 0) goto fail;
      |                                                                   ^~~~

../simulator.cpp:731:21: note:   crosses initialization of ‘std::string footer’
  731 |         std::string footer = "END_PATH\n";
      |                     ^~~~~~
../simulator.cpp: In member function ‘std::string CommandServer::processCommand(const string&)’:
../simulator.cpp:933:35: error: ‘generateMorphRings’ was not declared in this scope
  933 |                 auto morphRings = generateMorphRings(last2D, newRef, 12, 0.01);
      |                                   ^~~~~~~~~~~~~~~~~~
../simulator.cpp:934:17: error: ‘rendererClient’ was not declared in this scope; did you mean ‘RendererClient’?
  934 |                 rendererClient.sendPath3D(morphRings);
      |                 ^~~~~~~~~~~~~~
      |                 RendererClient
../simulator.cpp:935:35: error: ‘flattenRingsToPath’ was not declared in this scope
  935 |                 writeGCodeForPath(flattenRingsToPath(morphRings), "morph_transition.gcode");
      |                                   ^~~~~~~~~~~~~~~~~~
../simulator.cpp:935:17: error: ‘writeGCodeForPath’ was not declared in this scope
  935 |                 writeGCodeForPath(flattenRingsToPath(morphRings), "morph_transition.gcode");
      |                 ^~~~~~~~~~~~~~~~~
../simulator.cpp: In function ‘std::vector<std::vector<Point3D> > generateSpiralRingsFromCrossSection(const std::vector<Point2D>&, double, int, bool)’:
../simulator.cpp:1024:41: error: ‘scaleShapeAroundCentroid’ was not declared in this scope
 1024 |         std::vector<Point2D> scaled2d = scaleShapeAroundCentroid(crossSection, scale);
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~
../simulator.cpp: In function ‘int main()’:
../simulator.cpp:1131:22: error: redeclaration of ‘bool domePhaseActive’
 1131 |                 bool domePhaseActive = false; // set true when building actual dome
      |                      ^~~~~~~~~~~~~~~
../simulator.cpp:1128:22: note: ‘bool domePhaseActive’ previously declared here
 1128 |                 bool domePhaseActive = false; // placeholder for now; true when building dome
      |                      ^~~~~~~~~~~~~~~
../simulator.cpp:1144:33: error: ‘flattenRingsToPath’ was not declared in this scope
 1144 |                 auto fullPath = flattenRingsToPath(rings);
      |                                 ^~~~~~~~~~~~~~~~~~
../simulator.cpp:1146:17: error: ‘writeGCodeForPath’ was not declared in this scope
 1146 |                 writeGCodeForPath(fullPath, std::string("ilc_path_") + std::to_string(gcount++) + ".gcode");
      |                 ^~~~~~~~~~~~~~~~~
Simulator compilation failed!

